@@ -9,7 +9,7 @@
    <TITLE>libstdc++-v3 HOWTO:  Chapter 22</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/docs/22_locale/">
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.1 2000/04/21 20:33:31 bkoz Exp $ -->
+<!-- $Id: howto.html,v 1.2 2000/07/11 21:45:07 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -25,7 +25,7 @@
 <H1>Contents</H1>
 <UL>
    <LI><A HREF="#1">Stroustrup on Locales</A>
-   <LI><A HREF="#2">Topic</A>
+   <LI><A HREF="#2">Notes on the codecvt implementation</A>
 </UL>
 
 <HR>
@@ -45,9 +45,10 @@
    </P>
 
 <HR>
-<H2><A NAME="2">Topic</A></H2>
-   <P>More stuff will have to wait until somebody with locale
-      experience can share it...
+<H2><A NAME="2">Notes on the codecvt implementation</A></H2>
+   <P> This document turned out to be larger than anticipated. As
+   such, it gets its own page, which can be found 
+   <A HREF="codecvt.html">here</A>.
    </P>
    <P>Return <A HREF="#top">to top of page</A> or
       <A HREF="../faq/index.html">to the FAQ</A>.
@@ -63,7 +64,7 @@
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@egcs.cygnus.com">Gabriel Dos Reis</A>.
-<BR> $Id: howto.html,v 1.1 2000/04/21 20:33:31 bkoz Exp $
+<BR> $Id: howto.html,v 1.2 2000/07/11 21:45:07 pme Exp $
 </EM></P>
 
 
